--- a/Term_Project/DataCleansing.ipynb
+++ b/Term_Project/DataCleansing.ipynb
@@ -2,6 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "35b2e10a",
+   "metadata": {},
+   "source": [
+    "---   \n",
+    " <img align=\"left\" width=\"50\" height=\"50\"  src=\"https://upload.wikimedia.org/wikipedia/en/c/c8/University_of_the_Punjab_logo.png\"> \n",
+    "\n",
+    "<h1 align=\"center\">House Price Prediction</h1>\n",
+    "<h1 align=\"center\">Advanced Machine Learning</h1>\n",
+    "\n",
+    "---\n",
+    "<h3><div align=\"right\">Maida Nadeem. (MSDSF22M001)</div></h3>  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "df6b1b66",
    "metadata": {},
    "source": [
@@ -19,6 +34,14 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0974b2c",
+   "metadata": {},
+   "source": [
+    "### Raw data"
    ]
   },
   {
@@ -128,6 +151,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f0856bfe",
+   "metadata": {},
+   "source": [
+    "## Removing Duplicates from Raw Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "id": "63dcf12a",
@@ -218,6 +249,14 @@
    ],
    "source": [
     "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a98494b",
+   "metadata": {},
+   "source": [
+    "## Converting Area into Numerical Scale of Marlas"
    ]
   },
   {
@@ -552,6 +591,14 @@
    ],
    "source": [
     "df.sample(15)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a84be4b5",
+   "metadata": {},
+   "source": [
+    "## Converting Price into Numerical Scale of Crore"
    ]
   },
   {
@@ -941,6 +988,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8a263066",
+   "metadata": {},
+   "source": [
+    "## Removing Addresses with Single Instance\n",
+    "#### As they can cause Issue in Train Test Split and Preprocessing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "id": "c5130483",
@@ -994,6 +1050,14 @@
    ],
    "source": [
     "df['Address'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "478c5d9c",
+   "metadata": {},
+   "source": [
+    "## Creating Cleaned Dataset CSV file"
    ]
   },
   {
@@ -1229,30 +1293,6 @@
     "df = pd.read_csv(\"House_Prices_cleaned.csv\")\n",
     "df.sample(20)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0a3c3074",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "868150f4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "466a739d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
